# cis6930sp26-rag-exercise

./: .env.example  .gitignore  README.md  client.py  evaluation.py  pyproject.toml  rag.py  run_server.sh  server.py  test_questions.py
